dhall/tests/type-inference/failure/unit/OperatorListConcatenateLhsNotList.txt
Type error: error: BinOpTypeMismatch
 --> <current file>:1:1
  |
1 | 1 # [ True ]
  | ^^^^^^^^^^^^ BinOpTypeMismatch
  |
